# ai-pr-review-workflow

./: .gitignore  README.md  example-ai-auth-caller-workflow.yml  example-simple-caller-workflow.yml
.github/workflows/: ai-pr-review.yml  fetch-json.yml  test-ai-auth-reusable-workflow.yml  test-simple-reusable-workflow.yml  v0-ai-auth-reusable-workflow.yml  v0-ai-pr-review-workflow.yml
design-docs/: eval-app-deployment.md  evaluation-feedback-system.md  short-names-for-action-ref.md
eval-app/: .gitignore  Makefile  README.md
eval-app/backend/: .env.example  logger.py  pyproject.toml
eval-app/backend/alembic/: env.py
eval-app/backend/alembic/versions/: 0e22916bf28d_create_ai_review_tables.py  8a2d543c9fa0_initial_repositories.py  9f5d50a05004_.py  e133d27cab5a_.py
eval-app/backend/app/: config.py  database.py  main.py
eval-app/backend/app/api/: __init__.py  ai_reviews.py  github.py  repos.py
eval-app/backend/app/models/: __init__.py  ai_review.py  repo.py
eval-app/backend/app/schemas/: __init__.py  ai_review.py  repo.py
eval-app/backend/db/: ai_reviews.py  repos.py
eval-app/backend/scraper/: fetch_reactions.py  github.py  scrape_github.py
eval-app/frontend/: .gitignore  index.html  package-lock.json  package.json
eval-app/frontend/scripts/: generate-client.js
eval-app/frontend/src/: App.tsx  main.tsx  theme.ts  tokens.ts  types.ts
eval-app/frontend/src/client/: index.ts  schema.ts
eval-app/frontend/src/components/: CommentViewer.tsx  DiffViewer.tsx  FiltersCard.tsx  Header.tsx  MetricsCards.tsx  RepositoryPerformanceChart.tsx  ReviewCard.tsx  ReviewsList.tsx  TrendChart.tsx  index.ts
eval-app/frontend/src/utils/: analytics.ts  github.ts
example-caller-workflows/: example-ai-auth-caller-workflow.yml  example-ai-pr-review.yml  example-simple-caller-workflow.yml  example-v0-ai-auth-caller-workflow.yml  example-v0-ai-pr-review-workflow-custom.yml  example-v0-ai-pr-review-workflow.yml
example-caller-workflows/stages/: v0-stages.json
prompts/: [template].md  bug-finder.md  guidelines.md
