[project]
name = "fullstack-app"
version = "0.1.0"
description = "Full-stack FastAPI + React scaffolding"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy-cockroachdb>=2.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "tabulate",
    "PyGithub",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
